troubleshooting layout issue

--- a/quartz/styles/variables.scss
+++ b/quartz/styles/variables.scss
@@ -8,7 +8,8 @@
  * assuming mobile < desktop
  */
 $breakpoints: (
-  mobile: 800px,
+  mobile: 600px,
+  tablet: 800px,
   desktop: 1200px,
 );
 
